test_files/bad/bad_definition_4.ru
def A "AA" "AA"

if "AA" then B